Issue module not found resolved

--- a/research/Text_Summarization.ipynb
+++ b/research/Text_Summarization.ipynb
@@ -1272,8 +1272,8 @@
         "print(sample_text)\n",
         "\n",
         "\n",
-        "print(\"\\nReference Summary:\")\n",
-        "print(reference)\n",
+        "# print(\"\\nReference Summary:\")\n",
+        "# print(reference)\n",
         "\n",
         "\n",
         "print(\"\\nModel Summary:\")\n",
@@ -1303,7 +1303,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.20"
+      "version": "3.11.11"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
