--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -127,7 +127,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\HP\\anaconda3\\envs\\textS\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\HP\\anaconda3\\envs\\textS\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-02 04:53:32,617: INFO:config:PyTorch version 2.4.1 available.]\n"
+      "[2025-01-18 10:15:29,519: INFO:config:PyTorch version 2.5.1 available.]\n"
      ]
     }
    ],
@@ -188,24 +188,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-01 23:49:04,864: INFO:common:yaml file: D:\\Projects\\Text_Summarizer\\config\\config.yaml loaded successfully]\n",
-      "[2025-01-01 23:49:04,867: INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2025-01-01 23:49:04,868: INFO:common:created directory at: artifacts]\n",
-      "[2025-01-01 23:49:04,869: INFO:common:created directory at: artifacts/data_transformation]\n"
+      "[2025-01-18 10:15:29,694: INFO:common:yaml file: D:\\Projects\\Text_Summarizer\\config\\config.yaml loaded successfully]\n",
+      "[2025-01-18 10:15:29,696: INFO:common:yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-18 10:15:29,697: INFO:common:created directory at: artifacts]\n",
+      "[2025-01-18 10:15:29,698: INFO:common:created directory at: artifacts/data_transformation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Users\\HP\\anaconda3\\envs\\textS\\lib\\site-packages\\transformers\\tokenization_utils_base.py:4114: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]c:\\Users\\HP\\anaconda3\\envs\\textS\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:3961: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
       "  warnings.warn(\n",
-      "Map: 100%|██████████| 14732/14732 [00:02<00:00, 7119.73 examples/s]\n",
-      "Map: 100%|██████████| 819/819 [00:00<00:00, 6890.50 examples/s]\n",
-      "Map: 100%|██████████| 818/818 [00:00<00:00, 7011.08 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 14732/14732 [00:00<00:00, 460367.21 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 819/819 [00:00<00:00, 105226.99 examples/s]\n",
-      "Saving the dataset (1/1 shards): 100%|██████████| 818/818 [00:00<00:00, 116833.78 examples/s]\n"
+      "Map: 100%|██████████| 14732/14732 [00:01<00:00, 11831.73 examples/s]\n",
+      "Map: 100%|██████████| 819/819 [00:00<00:00, 11549.86 examples/s]\n",
+      "Map: 100%|██████████| 818/818 [00:00<00:00, 5217.84 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 14732/14732 [00:00<00:00, 778953.50 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 819/819 [00:00<00:00, 231259.93 examples/s]\n",
+      "Saving the dataset (1/1 shards): 100%|██████████| 818/818 [00:00<00:00, 204771.15 examples/s]\n"
      ]
     }
    ],
@@ -243,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
